<resources>
    <string name="app_name">BookStore</string>
    <string name="form_title">ADD A BOOK</string>
    <string name="title_hint">Title</string>
    <string name="hint_cover">URL Cover</string>
    <string name="isbn_hint">ISBN</string>
    <string name="author_hint">Authors</string>
    <string name="date_hint">Date</string>
    <string name="pages_hint">Number of pages</string>
    <string name="price_hint">Price</string>
    <string name="description_hint">Description</string>
    <string name="btn_add">INSERT</string>
    <string name="enc_hint">Binding</string>
    <string name="txt_editorial">Editorial</string>
    <string name="book_list_title">BOOK CATALOG</string>
    <string name="bookstore_title">BOOKSTORE</string>
    <string name="btnCatalog">CATALOG</string>
    <string name="btnAddBook">ADD BOOK</string>
    <string name="book_detail">BOOK</string>

    <string-array name="editorial_array">
        <item>Anaya</item>
        <item>Mac Graw Hill</item>
        <item>Oreilly</item>
        <item>Apress</item>
        <item>Manning</item>
        <item>Pretince Hall</item>
        <item>Rama</item>
    </string-array>


</resources>
