<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#E9A5A5"
    android:padding="16dp">

    <TextView
        android:id="@+id/bookListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:shadowColor="@color/white"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/bookstore_title"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCatalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCatalog"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookListTitle"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddBook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCatalog" />


</androidx.constraintlayout.widget.ConstraintLayout>